# RAPter

./: .gitignore  CMakeLists.txt  README.md
RAPter/: CMakeLists.txt  run_commands.txt
RAPter/dots/: graphical_model.gv
RAPter/include/: schnabelEnv.h
RAPter/include/pearl/: pearl.h  pearl.hpp
RAPter/include/rapter/: simpleTypes.h  typedefs.h
RAPter/matlab/: debugGlobOpt.m  refit.nb  test_grad_f.m
RAPter/matlab/test_fmincon/: function_handle.m  gurobiToSparseTxt.m  objective.m  patchCostFunction.m  testFMinConSelection.m  test_fmincon.m  write_files.m
RAPter/scripts/: cleanupFolder.sh  convert3d2ply.sh  createSymlinks.sh  divide.py  formulate_step2.sh  gurobi_step2.sh  lambdas.py  noisePwMatrix.py  normal_distr.py  rapter.py  run.sh  runGlobfit.py  runGlobfit.sh  runRoom.sh  run_old.sh  sample_step0.sh  show.py  showPearl.sh  showcands.sh  sshClem.sh
RAPter/src/: correspondence.cpp  drawGraphs.cpp  gaussSphere.cpp  generate3D.cpp  main.cpp  merge.cpp  problemSetup.cpp  problemSetup3D.cpp  reassign.cpp  refit.cpp  represent.cpp  schnabelEnv.cpp  solve.cpp
RAPter/src/comparison/: globFit.cpp  globFitTemplateInst.cpp  pearl.cpp  ransac.cpp  subsampleTemplateInst.cpp
RAPter/src/evaluation/: assignPointsToTriangles.cpp  eval.cpp
RAPter/src/templateInstantiation/: assignmentOps.cpp  primitive.cpp  segmentation.cpp  trianglesFromObj.cpp
RAPter/tex/: energy.tex  energy2.tex
globOpt/: CMakeLists.txt  Doxyfile  mymake
globOpt/doc/html/: 2rects__noise__0_8003_2starting__values_8m.html  2rects__noise__0_8003_2starting__values_8m_source.html  2rects__noise__0_8003__demo_2starting__values_8m.html  2rects__noise__0_8003__demo_2starting__values_8m_source.html  __1rect__input2__20140704__0852_2starting__values_8m.html  __1rect__input2__20140704__0852_2starting__values_8m_source.html  __2rects_2starting__values_8m.html  __2rects_2starting__values_8m_source.html  __rot__rects__noise_2starting__values_8m.html  __rot__rects__noise_2starting__values_8m_source.html  __rot__rects__noise__0_8015__20140711__1054_2starting__values_8m.html  __rot__rects__noise__0_8015__20140711__1054_2starting__values_8m_source.html  __rot__rects__noise__0_802__20140711__1046_2starting__values_8m.html  __rot__rects__noise__0_802__20140711__1046_2starting__values_8m_source.html  __simple_2starting__values_8m.html  __simple_2starting__values_8m_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_v_tools_8h.html  _c_v_tools_8h_source.html  _k_m_point_8h.html  _k_m_point_8h_source.html  _my_g_r_b_callback_8h.html  _my_g_r_b_callback_8h_source.html  alpha_exp_opt_problem_8cpp.html  alpha_exp_opt_problem_8cpp_source.html  alpha_exp_opt_problem_8h.html  alpha_exp_opt_problem_8h_source.html  alpha_exp_opt_problem_8hpp.html  alpha_exp_opt_problem_8hpp_source.html  angle_primitive_8h.html  angle_primitive_8h_source.html  annotated.html  autodiff_8cpp.html  autodiff_8cpp_source.html  candidate_generator_8cpp.html  candidate_generator_8cpp_source.html  candidate_generator_8h.html  (+553 more)
globOpt/dots/: graph.gv  graph2.gv
globOpt/include/: CVTools.h  cuboidRansac.h  globFit2.h  globFit2.hpp  lineClustering.hpp  localAnalysis.hpp  optimization.h  schnabelEnv.h
globOpt/include/globfit2/: globOpt_types.h  my_types.h  parameters.h  simple_types.h
globOpt/include/kmeans/: KMPoint.h
globOpt/include/optimization/: exhaustiveOptProblem.h  simAnnOptProblem.h
globOpt/include/post_opt/: postAligner.hpp
globOpt/include/rapter/: globOpt_types.h  my_types.h  parameters.h  simple_types.h
globOpt/matlab/: debugGlobOpt.m  line_normal.m  mix_coeffs.m  process2D.m  read_ply.m  refit.nb
globOpt/matlab/test_fmincon/: get_line.m  perturb_rects.m  readSparseMatrix.m  show_stats.m  writeQ.m  writeSparseMatrix.m
globOpt/matlab/test_yalmip/: test0.m
globOpt/scripts/: compareToGlobfit.py  convert3d2ply.sh  convertPcds.sh  generate_step1.sh  lambdas.py  noisePw2Html.py  refit.py  run.sh  runFuncs.sh  runGlobfit.py  runMMF.sh  runRepr.sh  runSegmentation.py  show.py  showPrimitives.sh  showSchnabel.sh  showcands.sh  showquick.sh  showsnippets  sshClem.sh
globOpt/src/: autodiff.cpp  bipartite_test.cpp  correspondance.cpp  correspondence.cpp  datafit.cpp  drawGraphs.cpp  gaussSphere.cpp  generate.cpp  generate3D.cpp  merge.cpp  pearl_specialize.cpp  problemSetup.cpp  problemSetup3D.cpp  qp_main.cpp  reassign.cpp  refit.cpp  represent.cpp  schnabelEnv.cpp  segment.cpp  segment3D.cpp  solve.cpp  solve3D.cpp  subsample.cpp
globOpt/src/comparison/: globFit.cpp  (+5 more)
globOpt/tex/: alg4.tex  pseudocode.txt
globfit/: CMakeLists.txt  installGlobfit.sh
globfit/include/: ColorMap.h  Cone.h  CoreExports.h  Cylinder.h  GlobFit.h  Plane.h  Primitive.h  RelationEdge.h  RelationGraph.h  RelationVertex.h  Sphere.h  Types.h  Viewer.h
globfit/matlab/: LoadData.m  LoadNameMap.m  OptimizeDistance.m  OptimizeNormal.m  OptimizePoint.m  OptimizeRadius.m  Run_1_ParaOrth.m  Run_2_EqualAngle.m  Run_3_CoAxial.m  Run_4_CoPlanar.m  Run_5_EqualLength.m  Run_6_EqualRadius.m
globfit/src/: ColorMap.cpp  Cone.cpp  Cylinder.cpp  EqualityAlignment.cpp  GlobFit.cpp  OrientationAlignment.cpp  PlacementAlignment.cpp  Plane.cpp  Primitive.cpp  Relation.cpp  RelationEdge.cpp  RelationGraph.cpp  RelationVertex.cpp  Render.cpp  Solver.cpp  Sphere.cpp  Viewer.cpp  main.cpp
inputGen/: CMakeLists.txt  inputGen.pro
inputGen/dep/: CMakeLists.txt
inputGen/include/: convexHull2D.h  displacement.h  displacementfactory.h  mainwindow.h  mergedialog.h  myscene.h  myview.h  primitive.h  project.h  samplegenerator.h  samplegeneratorfactory.h  sampler.h  samplerfactory.h  types.h  typesGL.h
inputGen/src/: displacementfactory.cpp  mainwindow.cpp  mergedialog.cpp  myscene.cpp  myview.cpp  samplegeneratorfactory.cpp  samplerfactory.cpp
inputGen/ui/: displacementfactory.ui  mainwindow.ui  mergedialog.ui  samplegeneratorfactory.ui  samplerfactory.ui
visualization/: CMakeLists.txt
visualization/src/: main.cpp  visualization.cpp
visualizer/: CMakeLists.txt
(+1637 files in other folders)
